Fix pf2e styles, and shift around init

--- a/styles/module.scss
+++ b/styles/module.scss
@@ -72,7 +72,7 @@ $dark-maroon: #2B0603;
     }
 
     .actor-listing {
-        background: url(../../../systems/pf2e/assets/sheet/header.png) !important;
+        background: url(../../../systems/pf2e/assets/sheet/header.webp) !important;
     }
 
     .traits {
